# rust-lang-change-aggregator

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs
src/dto/: annoucement.rs  announcement.rs  announcement_detail.rs  mod.rs
src/parser/: announcement_detail.rs  mod.rs  root_blog.rs
